--- a/covid19/TestReport.Rmd
+++ b/covid19/TestReport.Rmd
@@ -9,12 +9,15 @@ params:
     base: NA
     pjDays: NA
     socDis: NA
-    
+
+---
+
+
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
----
+
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 # Some global stuff
 library(ggplot2)
@@ -35,6 +38,10 @@ HospUltz = HospitalIncreases(Counties, Hospitals)
 ```
 ---
 
+
+
+
+
 <center>
 #  Base: `r params$base` 
 </center>
@@ -42,6 +49,9 @@ HospUltz = HospitalIncreases(Counties, Hospitals)
 The Air Force COVID-19 Health Assessment Dashboard (CHAD) was developed to provide a centralized location for leadership to receive up-to-date pandemic information specifically tailored to their installation and the surrounding local area. 
 
 This report was generated using a **`r params$radius` mile radius** around **`r params$base`** as the defined local area.
+
+
+
 
 ## Current Local Area Info
 
@@ -72,7 +82,7 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 
 <div class = "col-md-8">
 
-```{r echo=FALSE}
+```{r fig.height = 4, fig.width = 5, echo=FALSE}
 CountyChoro = PlotLocalChoro(Counties, base, "County")
 CountyChoro
 ```
@@ -93,8 +103,8 @@ The charts below display the
 <div class = "col-md-6">
 ```{r fig.height = 4, fig.width = 4, echo=FALSE}
 CCDaily = CovidCasesPerDayChart(base, radius, Counties, Hospitals)
-CCDaily = CCDaily %>% layout(xaxis = list(showgrid = F),
-                   yaxis = list(gridcolor = "lightgray"))
+CCDaily = CCDaily %>% layout(xaxis = list(showgrid = T),
+                             yaxis = list(showgrid = T))
 CCDaily
 ```
 </div>
@@ -102,13 +112,19 @@ CCDaily
 <div class = "col-md-6">
 ```{r fig.height = 4, fig.width = 4, echo=FALSE}
 CCtot = CovidCasesCumChart(base, radius, Counties, Hospitals)
-CCtot = CCtot %>% layout(xaxis = list(showgrid = F),
-                 yaxis = list(gridcolor = "lightgray"))
+CCtot = CCtot %>% layout(xaxis = list(showgrid = T),
+                         yaxis = list(showgrid = T))
 CCtot
 ```
 </div>
 
 </div>
+
+
+
+### Detailed County Info
+
+The table displays information for each county in `r params$radius` of `r params$base`.
 
 
 ```{r echo=FALSE}
@@ -117,6 +133,19 @@ kable(CountyDT) %>%
 ```
 
 
-Base is `r params$base` and the radius is `r params$radius`
+
+### Local Projections
+
+This section will display the projections from the IHME model and CHIME inspired model
+
+#### Overlay
+
+```{r fig.height = 5, fig.width = 10,echo=FALSE}
+overlay = PlotOverlay(params$base, Counties, Hospitals, params$socDis, params$pjDays)
+overlay
+```
+
+
+
 
 
